--- a/src/mailer/templates/forgot-password.mjml
+++ b/src/mailer/templates/forgot-password.mjml
@@ -83,8 +83,8 @@
           padding-bottom="0px"
           padding-top="0"
           ><span style="line-height: 1.5"
-            ><a href="#{url}" target="_blank" style="color: #004c97"
-              >#{url}</a
+            ><a href="{verificationRedirectLink}" target="_blank" style="color: #004c97"
+              >{verificationRedirectLink}</a
             ></span
           ></mj-text
         >
@@ -134,7 +134,7 @@
           <p>
             <span style="color: #666666; line-height: 1.5"
               >Regards,<br />
-              The Genesis Team.</span
+              Bricks.</span
             >
           </p>
         </mj-text>
