feat: complete forgot and reset password flow

--- a/src/mailer/templates/forgot-password.mjml
+++ b/src/mailer/templates/forgot-password.mjml
@@ -54,7 +54,7 @@
           <p>
             <span style="color: #666666; line-height: 1.2"
               >You're receiving this e-mail because you requested a password
-              reset for your user account at
+              reset for your user account at Bricks.
             </span>
           </p>
         </mj-text>
@@ -83,8 +83,11 @@
           padding-bottom="0px"
           padding-top="0"
           ><span style="line-height: 1.5"
-            ><a href="{verificationRedirectLink}" target="_blank" style="color: #004c97"
-              >{verificationRedirectLink}</a
+            ><a
+              href="{verificationRedirectLink}"
+              target="_blank"
+              style="color: #004c97"
+              >{{verificationRedirectLink}}</a
             ></span
           ></mj-text
         >
